--- a/src/lib/views/includes/identity-rows.njk
+++ b/src/lib/views/includes/identity-rows.njk
@@ -2,18 +2,18 @@
   <td class="identity-information_body_row_cell">{{ identity.label }}</td>
 </tr>
 <tr class="identity-information_body_row">
-  <td class="identity-information_body_row_cell">Name & Organization</td>
+  <td class="identity-information_body_row_cell">{{ intlGet("domain.table.nameOrganization") }}</td>
   <td class="identity-information_body_row_cell">{{ ([ identity.name, identity.organization ] | join) if (identity.name or identity.organization) else "N/A" }}</td>
 </tr>
 <tr class="identity-information_body_row">
-  <td class="identity-information_body_row_cell">Address</td>
+  <td class="identity-information_body_row_cell">{{ intlGet("domain.table.address") }}</td>
   <td class="identity-information_body_row_cell">{{ ([ identity.street_address, identity.city, identity.region, identity.country, identity.zip_code ] | join) if (identity.street_address or identity.city or identity.region or identity.country or identity.zip_code) else "N/A" }}</td>
 </tr>
 <tr class="identity-information_body_row">
-  <td class="identity-information_body_row_cell">Phone</td>
+  <td class="identity-information_body_row_cell">{{ intlGet("domain.table.phone") }}</td>
   <td class="identity-information_body_row_cell">{{ identity.phone or "N/A" }}</td>
 </tr>
 <tr class="identity-information_body_row">
-  <td class="identity-information_body_row_cell">Email</td>
+  <td class="identity-information_body_row_cell">{{ intlGet("domain.table.email") }}</td>
   <td class="identity-information_body_row_cell">{{ identity.email or "N/A" }}</td>
 </tr>
