--- a/static/styles/common/heading.css
+++ b/static/styles/common/heading.css
@@ -1,5 +1,12 @@
+.heading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .heading__text {
   margin: 0 var(--spacing-sm);
+  display: inline-block;
 }
 
 .heading__text--national-1 {
@@ -12,4 +19,12 @@
 
 .heading__text--national-3 {
   color: red;
+}
+
+.heading__main {
+  display: inline-block;
+}
+
+.heading__subheading-header {
+  margin: 0;
 }
