--- a/src/lib/views/index.njk
+++ b/src/lib/views/index.njk
@@ -58,8 +58,9 @@
   <hr/>
   <div class="footer">
     <em>
+      {% set lastImportDate = lastImport.toLocaleString() if lastImport else "N/A" %}
       {{ formatMessage(intlGet("home.footer.lastUpdate"), {
-        date: lastImport.toLocaleString()
+        date: lastImportDate
       }) }}
     </em>
     <span>
